--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,2 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'bootstrap/scss/bootstrap';
+@import url('https://fonts.googleapis.com/css2?family=Creepster&family=Aladin&display=swap');
